update http path

--- a/html/Index.html
+++ b/html/Index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML overlays</title>
+    <title>KioBot 2.0</title>
 </head>
 <body>
+    <h1>Welcome to Kiobot 2.0!</h1>
+    <h2>Overlays</h2>
     <p>Add the following overlays to OBS as browser source</p>
     <p><a href="readMessage.html">Read chat messages</a></p>    
 </body>
