use dotenv instead of config files

--- a/html/Index.html
+++ b/html/Index.html
@@ -9,6 +9,6 @@
     <h1>Welcome to Kiobot 2.0!</h1>
     <h2>Overlays</h2>
     <p>Add the following overlays to OBS as browser source</p>
-    <p><a href="readMessage.html">Read chat messages</a></p>    
+    <p><a href="/overlays/readMessage.html">Read chat messages</a></p>    
 </body>
 </html>
